--- a/themes/demo/layouts/_default/baseof.html
+++ b/themes/demo/layouts/_default/baseof.html
@@ -13,8 +13,13 @@
         
         {{- partial "footer.html" . -}}
 
-        {{ $js := resources.Get "js/index.js" | minify }}
-        <!-- Add the JS link here --> 
+        <!-- Get JS -->
+        {{- $index := resources.Get "js/index.js" | minify | fingerprint -}}
+        {{- $jquery := resources.Get "js/jquery-3.3.1.js" | minify | fingerprint -}}
+        
+        <!-- Bundle the JS -->
+        <script type="text/javascript" src="{{ $jquery.Permalink }}"></script>
+        <script type="text/javascript" src="{{ $index.Permalink }}"></script>
     </body>
 
 </html>
