Added template names to pages

--- a/themes/demo/layouts/_default/list.html
+++ b/themes/demo/layouts/_default/list.html
@@ -1,4 +1,5 @@
 {{ define "main" }}
+    <code>Template: default list</code>
     <!-- Template voor alle list pages (_index.md) -->
     {{ .Content }}
 
