--- a/themes/demo/layouts/_default/single.html
+++ b/themes/demo/layouts/_default/single.html
@@ -1,4 +1,5 @@
 {{ define "main" }}
+    <code>Template: default single</code>
     <!-- Template voor alle single pages (_index.md) -->
     {{ .Content }}
 {{ end }}
