--- a/themes/demo/layouts/blog/single.html
+++ b/themes/demo/layouts/blog/single.html
@@ -1,4 +1,5 @@
 {{ define "main" }}
+    <code>Template: blog single</code>
     <!-- Blog heeft een aparte single page met eigen elementen -->
     <p>
         <a href='/blog'>← Terug naar de blog</a>
