--- a/themes/demo/assets/scss/main.scss
+++ b/themes/demo/assets/scss/main.scss
@@ -7,3 +7,12 @@ table {
         border: 1px solid black;
     }
 }
+
+code {
+    color: red;
+    font-size: 15px;
+}
+
+pre > code {
+    color: black;
+}
