--- a/themes/demo/layouts/partials/footer.html
+++ b/themes/demo/layouts/partials/footer.html
@@ -1,3 +1,11 @@
 <hr />
 
 <p><i>© Footer van Tim's demosite.</i></p>
+
+<!-- Get JS -->
+{{- $index := resources.Get "js/index.js" | minify | fingerprint -}}
+{{- $jquery := resources.Get "js/jquery-3.3.1.js" | minify | fingerprint -}}
+
+<!-- Bundle the JS -->
+<script type="text/javascript" src="{{ $jquery.Permalink }}"></script>
+<script type="text/javascript" src="{{ $index.Permalink }}"></script>
